# iot-sdk-cpp

./: CMakeLists.txt
scripts/: start_gdbserver_on_target.sh
src/: main.cpp
